second commit - book_item.xml and book_activity.xml files

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,5 +11,6 @@
         android:layout_height="wrap_content"
         android:queryHint="@string/search_books"
         android:iconifiedByDefault="false"
+        android:id= "@+id/search_book"
        />
 </LinearLayout>
