third commit - formulated structure for Main activity added Loader Manager. Still TODO: implement querying based on SearchView

--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -16,10 +16,12 @@
         tools:text = "Charlotte's Webb"/>
 
     <TextView
+        android:id = "@+id/book_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text = "Malcolm Warner"/>
     <TextView
+        android:id = "@+id/book_publication_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text = "2001"/>
