--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+    android:orientation="vertical"
+tools:context=".MainActivity">
 
-    <SearchView
+<SearchView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:queryHint="@string/search_books"
+    android:iconifiedByDefault="false"
+    android:id= "@+id/search_book"
+    />
+
+    <ListView
+        android:id="@+id/list"
+        android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:dividerHeight="0dp"/>
+
+
+    <TextView
+        android:id = "@+id/empty_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:queryHint="@string/search_books"
-        android:iconifiedByDefault="false"
-        android:id= "@+id/search_book"
-       />
+        android:layout_centerInParent="true"
+        />
+    <ProgressBar
+        android:id= "@+id/loading_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style= "@style/Widget.AppCompat.ProgressBar"
+        android:layout_centerInParent="true"/>
+    <TextView
+        android:id = "@+id/no_internet_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
 </LinearLayout>
