--- a/app/src/main/res/layout/book_activity.xml
+++ b/app/src/main/res/layout/book_activity.xml
@@ -20,4 +20,17 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         />
+    <ProgressBar
+        android:id= "@+id/loading_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style= "@style/Widget.AppCompat.ProgressBar"
+        android:layout_centerInParent="true"/>
+    <TextView
+        android:id = "@+id/no_internet_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
+
 </RelativeLayout>
