--- a/app/src/main/res/layout/book_activity.xml
+++ b/app/src/main/res/layout/book_activity.xml
@@ -3,7 +3,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <ListView
         android:id="@+id/list"
@@ -11,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"
-        android:dividerHeight="0dp"/>
+        android:dividerHeight="0dp"
+        />
 
 
     <TextView
@@ -25,7 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style= "@style/Widget.AppCompat.ProgressBar"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        />
+
     <TextView
         android:id = "@+id/no_internet_textview"
         android:layout_width="wrap_content"
