--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="@dimen/list_item_height"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_marginLeft="16dp"
@@ -10,29 +10,62 @@
     android:layout_marginBottom="12dp">
 
 
-    <TextView
-        android:id= "@+id/book_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text = "Charlotte's Webb"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:fontFamily="baskerville"
-        android:textColor="@android:color/black"/>
+    <ImageView
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:id= "@+id/default_icon"/>
 
-    <TextView
-        android:id = "@+id/book_author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text = "Malcolm Warner"
-        android:textSize="14sp"
-        android:fontFamily="sans-serif-medium"
-        />
-    <TextView
-        android:id = "@+id/book_publication_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text = "2001"
-        android:textSize="14sp"
-        android:fontFamily="sans-serif-smallcaps"/>
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/text_box"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/list_item_height"
+        android:layout_alignParentStart="true"
+
+        android:layout_alignParentTop="true"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp">
+
+        <TextView
+            android:id="@+id/book_title"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="58dp"
+            android:fontFamily="baskerville"
+            android:gravity="top"
+
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:text="Charlotte's Webb" />
+
+        <TextView
+            android:id="@+id/book_author"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/book_title"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="bottom"
+
+            android:textSize="14sp"
+            tools:text="Malcolm Warner" />
+
+        <TextView
+            android:id="@+id/book_publication_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="37dp"
+            android:fontFamily="sans-serif-smallcaps"
+            android:paddingLeft="16dp"
+            android:textSize="14sp"
+            tools:text="2001"
+            />
+    </RelativeLayout>
+</RelativeLayout>
