--- a/app/src/main/res/layout/book_activity.xml
+++ b/app/src/main/res/layout/book_activity.xml
@@ -21,7 +21,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_below="@id/empty_dogBook_image"
         />
+    <ImageView
+        android:id="@+id/empty_dogBook_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/mr_petey"/>
     <ProgressBar
         android:id= "@+id/loading_spinner"
         android:layout_width="wrap_content"
@@ -31,11 +38,12 @@
         android:indeterminate="true"
         />
 
-    <TextView
+    <ImageView
         android:id = "@+id/no_internet_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+
         />
 
 </RelativeLayout>
