--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/list_item_height"
+    android:layout_height = "@dimen/list_item_height"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_marginLeft="16dp"
@@ -12,15 +12,17 @@
 
     <ImageView
         android:layout_width="44dp"
-        android:layout_height="44dp"
-        android:id= "@+id/default_icon"/>
+        android:layout_height="88dp"
+        android:id= "@+id/default_icon"
+        android:paddingTop="10dp"
+        />
 
     <RelativeLayout
         android:id="@+id/text_box"
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_item_height"
         android:layout_alignParentStart="true"
-
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical"
         android:paddingLeft="16dp"
@@ -28,44 +30,45 @@
 
         <TextView
             android:id="@+id/book_title"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="58dp"
-            android:fontFamily="baskerville"
+            android:layout_marginLeft="58dp"
+            android:fontFamily="Open Sans"
             android:gravity="top"
-
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
+            android:textColor="#1F4788"
+            android:textSize="20sp"
             android:textStyle="bold"
             tools:text="Charlotte's Webb" />
 
         <TextView
             android:id="@+id/book_author"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-
-            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/book_title"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="bottom"
+            android:layout_alignLeft="@+id/book_title"
+            android:layout_below="@+id/book_title"
+            android:fontFamily="Open Sans"
 
-            android:textSize="14sp"
+            android:gravity="bottom"
+            android:textColor="#22A7F0"
+            android:textSize="15sp"
             tools:text="Malcolm Warner" />
 
         <TextView
             android:id="@+id/book_publication_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="37dp"
-            android:fontFamily="sans-serif-smallcaps"
-            android:paddingLeft="16dp"
-            android:textSize="14sp"
-            tools:text="2001"
-            />
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/book_title"
+            android:fontFamily="Open Sans"
+            android:paddingLeft="20dp"
+            android:textColor="#22A7F0"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="2001" />
     </RelativeLayout>
 </RelativeLayout>
